--- a/biblio.bib
+++ b/biblio.bib
@@ -386,3 +386,44 @@ publisher = {Institute of Electrical and Electronics Engineers Inc.}
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2310.03003}, 
 }
+
+@article{ford1956maxflow,
+  title     = {Maximal Flow Through a Network},
+  author    = {Ford, L. R. and Fulkerson, D. R.},
+  journal   = {Canadian Journal of Mathematics},
+  volume    = {8},
+  pages     = {399--404},
+  year      = {1956},
+  doi       = {10.4153/CJM-1956-045-5}
+}
+
+@ARTICLE{bk2004maxflow,
+  author={Boykov, Y. and Kolmogorov, V.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={An experimental comparison of min-cut/max-flow algorithms for energy minimization in vision}, 
+  year={2004},
+  volume={26},
+  number={9},
+  pages={1124-1137},
+  doi={10.1109/TPAMI.2004.60}
+}
+
+@article{hochbaum2008pseudoflow,
+  title={The pseudoflow algorithm: A new algorithm for the maximum-flow problem},
+  author={Hochbaum, Dorit S},
+  journal={Operations research},
+  volume={56},
+  number={4},
+  pages={992--1009},
+  year={2008},
+  publisher={INFORMS}
+}
+
+@inproceedings{goldberg2015faster,
+  title={Faster and more dynamic maximum flow by incremental breadth-first search},
+  author={Goldberg, Andrew V and Hed, Sagi and Kaplan, Haim and Kohli, Pushmeet and Tarjan, Robert E and Werneck, Renato F},
+  booktitle={Algorithms-ESA 2015: 23rd Annual European Symposium, Patras, Greece, September 14-16, 2015, Proceedings},
+  pages={619--630},
+  year={2015},
+  organization={Springer}
+}
